httpuv 1.0.6.2
------------------------------------------------------------------------

* Work properly with body=c(file="foo"). Previously this only worked if
  body was a list, not a character vector.

* R CMD INSTALL will do `git submodule update --init` if necessary.

* When onHeaders() callback returned a body, httpuv was not properly
  short-circuiting the request.


httpuv 1.0.6.1
------------------------------------------------------------------------

* Make request available on websocket object.


httpuv 1.0.6
------------------------------------------------------------------------

* Support listening on pipes (Unix domain sockets have been tested,
  Windows named pipes have not been tested but may work).

* Fix crash on CentOS 6.4 due to weird interaction with OpenSSL.


httpuv 1.0.5
------------------------------------------------------------------------

* Initial release.