@@ -375,26 +375,6 @@ void stop_loop_timer_cb(uv_timer_t* handle, int status) {
   uv_stop(handle->loop);
 }
 
-#ifndef _WIN32
-// Linux uses sighandler_t and Mac uses sig_t, so define our own
-typedef void (*signal_handler_t)(int);
-
-class IgnoreSignal {
-  int _signum;
-  signal_handler_t _origHandler;
-
-public:
-  IgnoreSignal(int signum) : _signum(signum) {
-    _origHandler = signal(signum, SIG_IGN);
-  }
-
-  virtual ~IgnoreSignal() {
-    if (_origHandler != SIG_ERR)
-      signal(_signum, _origHandler);
-  }
-};
-#endif
-
 // Run the libuv default loop for roughly timeoutMillis, then stop
 // [[Rcpp::export]]
 bool run(uint32_t timeoutMillis) {
@@ -421,7 +401,7 @@ bool run(uint32_t timeoutMillis) {
   // Must ignore SIGPIPE when libuv code is running, otherwise unexpectedly
   // closing connections kill us
 #ifndef _WIN32
-  IgnoreSignal(SIGPIPE);
+  signal(SIGPIPE, SIG_IGN);
 #endif
   return uv_run(uv_default_loop(), UV_RUN_ONCE);
 }
